--- a/package.json
+++ b/package.json
@@ -58,8 +58,10 @@
     "webpack-merge": "^5.8.0"
   },
   "dependencies": {
+    "@babel/core": "^7.15.8",
     "@egjs/hammerjs": "^2.0.17",
     "bootstrap": "^5.1.1",
+    "browser-sync": "^2.27.5",
     "dotenv": "^8.2.0",
     "flickity": "^2.2.2",
     "fontfaceobserver": "^2.1.0",
